<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:textStyle="italic"
        android:textSize="14pt"
        android:id="@+id/txtAccount"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAccountName"
        android:layout_marginTop="50dp"
        android:hint="@string/new_account_name"
        android:textStyle="italic"
        android:layout_below="@+id/txtAccount"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLogin"
        android:layout_below="@+id/etAccountName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:hint="@string/login"
        android:textStyle="italic"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/etPassword"
        android:layout_below="@+id/etLogin"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:textStyle="italic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:id="@+id/btConfirm"
        android:layout_below="@+id/etPassword"
        android:layout_alignEnd="@+id/etPassword"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="50dp" />




</RelativeLayout>